# COMP371-Project

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake_modules/: FindASSIMP.cmake  FindSOIL.cmake
models/Project/Individual/: chair1.skp  chair1b.skp  chair2b.skp  chair3.skp  chair3b.skp  couch1.skp  couch2.skp  couch3.skp  floor.skp  roof.skp  shelf1.skp  shelf3.skp  table1.skp  table2.skp  table3.skp
models/Project/chair1/: chair1.mtl
models/Project/chair1b/: chair1b.mtl
models/Project/chair2/: chair2.mtl
models/Project/chair2b/: chair2b.mtl
models/Project/chair3/: chair3.mtl
models/Project/chair3b/: chair3b.mtl
models/Project/couch1/: couch1.mtl
models/Project/couch2/: couch2.mtl
models/Project/couch3/: couch3.mtl
models/Project/floor/: floor.mtl
models/Project/lamps/: lamps.mtl
models/Project/roof/: roof.mtl
models/Project/shelf1/: shelf1.mtl
models/Project/shelf2/: shelf2.mtl
models/Project/shelf3/: shelf3.mtl
models/Project/table1/: table1.mtl
models/Project/table2/: table2.mtl
models/Project/table3/: table3.mtl
models/Project/walls/: walls.mtl
models/skybox/: cube.mtl
shaders/: col_lighting.frag  col_lighting.vert  col_lighting_v2.frag  no_shade.frag  no_shade.vert
src/: Skybox.cpp  Skybox.h  camera.hpp  cube.hpp  geo_obj.hpp  input.hpp  lamp.h  main.cpp  mesh.hpp  model.hpp  objloader.cpp  plane.cpp  plane.hpp  shader.hpp  track.cpp  track.hpp  window.hpp  world.hpp
